--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="https://www.linkedin.com/in/joaquin-rodr%C3%ADguez-gala-348890230/"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://www.instagram.com/joaquin.rg04/?next=%2F"><i class='bx bxl-instagram'></i></a>
             </div>
-            <a href="cv joaa.pdf" class="btn">Download CV</a>
+            <a href="CV joaquin.pdf" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="home.png" alt="Home Image">
